# signal

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_signal_schema.py  0002_snapshot_query_fields.py  0003_uuid_agent_run_queue.py  0004_digital_worker_runtime.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  fixtures.py  graph.py  graph_provider.py  nodes.py  prompts.py  runtime_context.py  scoring-rubric.v1.json  scoring.py  state.py
backend/app/agents/builders/: __init__.py  chains_builder.py  graphs_builder.py  nodes_builder.py
backend/app/agents/chains/: __init__.py  digital_worker.py  outreach_drafting.py
backend/app/agents/context/: __init__.py  digital_worker_lifecycle.py  (+1 more)
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/infrastructure/: __init__.py
backend/app/integrations/: __init__.py  public_data.py
backend/app/models/: __init__.py  signal.py
backend/app/observability/: __init__.py  agent_trace.py  langfuse_init.py
backend/app/repositories/: __init__.py  base.py  digital_worker.py  memory.py  postgres.py  signal_snapshot.py
backend/app/schemas/: analytics.py  digital_worker.py  knowledge_graph.py  lead.py  run.py
backend/app/services/: __init__.py  agent_execution_service.py  agent_run_builder.py  agent_run_service.py  analytics_service.py  demo_seed.py  digital_worker_service.py  knowledge_graph_service.py  lead_intake_service.py  lead_response_builder.py  lead_service.py
backend/app/workers/: __init__.py  app.py  tasks.py
backend/scripts/: demo_seed.py  seed_demo_leads.py
backend/tests/: conftest.py  fakes.py  test_agent_graph_provider.py  test_guardrails.py  test_health.py  test_lead_pipeline.py  test_public_data_adapter.py  test_public_data_adapters.py  test_public_data_clients.py  test_scoring_calibration.py
backend/tests/imports/: test_backend_module_imports.py
backend/tests/schemas/: test_lead_schema_descriptions.py
(+306 files in other folders)
