[project]
name = "signal-backend"
version = "0.1.0"
description = "Signal FastAPI and LangGraph backend."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "dnspython>=2.6.1",
    "email-validator>=2.2.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.8",
    "litellm>=1.80.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]
